--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
-streamlit==1.29.0
-pandas==2.1.4
-numpy==1.26.4
-matplotlib==3.8.2
-scipy==1.11.4
-plotly==5.18.0
-seaborn==0.13.0
-openpyxl==3.1.2
+streamlit
+pandas
+matplotlib
+scipy
+plotly
+seaborn
+openpyxl
